# fin-ai

./: LICENSE  README.md
phase-1-foundation/week-1-python/: api-test.rest  async_concepts.py  http_client.py  logging_config.py  main.py  models.py  pyproject.toml  sqs_consumer.py  test_http_client.py
phase-1-foundation/week-2-llm-fundamentals/: compare_prompt_versions.py  embedding_concepts_notes.md  first_api_calls.py  llm_client.py  prompts_registry.py  pyproject.toml  streaming_and_observability.py  structured_outputs.py
phase-1-foundation/week-2-llm-fundamentals/prompts/: loan_eligibility_v1.py  loan_eligibility_v2.py
phase-1-foundation/week-3-rag-retrieval/: database.py  embeddings.py  pyproject.toml
