[project]
name = "week-2-llm-fundamentals"
version = "0.1.0"
description = ""
authors = [
    {name = "PriyanshuGarg",email = "priyanshu.159803@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "openai (>=2.33.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "google-genai (>=1.74.0,<2.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "instructor (>=1.15.1,<2.0.0)",
    "groq (>=1.2.0,<2.0.0)",
    "jsonref (>=1.1.0,<2.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.13,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
