[project]
name = "week-3-rag-retrieval"
version = "0.1.0"
description = ""
authors = [
    {name = "PriyanshuGarg",email = "priyanshu.159803@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pgvector (>=0.4.2,<0.5.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "google-genai (>=2.5.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
